[gd_scene load_steps=15 format=3 uid="uid://dcoxwvp3ijlo4"]

[ext_resource type="Script" path="res://Menu.gd" id="1_1kkhg"]
[ext_resource type="StyleBox" uid="uid://cfyps1g5m4yf" path="res://Menu/button.tres" id="2_0m6u6"]
[ext_resource type="FontFile" uid="uid://bt7me82f7hdaq" path="res://font/IRANYekan-Black.ttf" id="2_ft30c"]
[ext_resource type="Texture2D" uid="uid://dwbt4ed0cqm7a" path="res://assets/DALL·E 2024-04-23 19.52.53 - Create a detailed and harmonious background for a game menu that would complement the uploaded image of a stylized, colorful city street with building.webp" id="2_ugcsh"]
[ext_resource type="StyleBox" uid="uid://cm7lumt5goex3" path="res://Menu/hover.tres" id="3_emcn1"]
[ext_resource type="StyleBox" uid="uid://dpm4rq470bmh1" path="res://Menu/press.tres" id="4_j18q0"]
[ext_resource type="FontFile" uid="uid://d0iilml6jl7cr" path="res://font/IranNastaliq.ttf" id="7_em7e6"]
[ext_resource type="FontFile" uid="uid://rx6ltmudlhu4" path="res://font/IRANYekan-Bold.ttf" id="8_lsdw8"]
[ext_resource type="StyleBox" uid="uid://bikpwmkm2n5of" path="res://Menu/close.tres" id="9_bfou1"]
[ext_resource type="AudioStream" uid="uid://d1g0q63vxtnmc" path="res://assets/Otjanbird-Pt.-I.mp3" id="11_8jc7k"]
[ext_resource type="Texture2D" uid="uid://5blbax1ec3j2" path="res://Menu/playing.png" id="11_sj4d4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kxedq"]
bg_color = Color(0, 0, 0, 0.545098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uwp11"]
bg_color = Color(0, 0, 0, 0.929412)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_78c12"]
bg_color = Color(0.439216, 0, 0, 1)
corner_radius_top_left = 1000
corner_radius_top_right = 1000
corner_radius_bottom_right = 1000
corner_radius_bottom_left = 1000

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1kkhg")
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -384.0
offset_top = -216.0
offset_right = 384.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ugcsh")

[node name="darker" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -990.0
offset_top = -908.0
offset_right = 990.0
offset_bottom = 551.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kxedq")
metadata/_edit_lock_ = true

[node name="Start" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -74.0
offset_right = 204.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_ft30c")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = ExtResource("2_0m6u6")
theme_override_styles/hover = ExtResource("3_emcn1")
theme_override_styles/pressed = ExtResource("4_j18q0")
theme_override_styles/focus = ExtResource("2_0m6u6")
text = "شروع بازی"

[node name="Guide" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -161.5
offset_top = 88.0
offset_right = 161.5
offset_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_ft30c")
theme_override_font_sizes/font_size = 65
theme_override_styles/normal = ExtResource("2_0m6u6")
theme_override_styles/hover = ExtResource("3_emcn1")
theme_override_styles/pressed = ExtResource("4_j18q0")
theme_override_styles/focus = ExtResource("2_0m6u6")
text = "راهنما"

[node name="Exit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -110.5
offset_top = -105.0
offset_right = 110.5
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_ft30c")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("2_0m6u6")
theme_override_styles/hover = ExtResource("3_emcn1")
theme_override_styles/pressed = ExtResource("4_j18q0")
theme_override_styles/focus = ExtResource("2_0m6u6")
text = "خروج"

[node name="title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -199.0
offset_top = -319.0
offset_right = 199.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_em7e6")
theme_override_font_sizes/font_size = 135
text = "مرحله اول"
horizontal_alignment = 1
vertical_alignment = 1

[node name="mute" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 10.0
offset_right = 96.0
offset_bottom = 90.0
texture_normal = ExtResource("11_sj4d4")
ignore_texture_size = true
stretch_mode = 0

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = -56.0
offset_top = -54.0
offset_right = 1486.0
offset_bottom = 796.0
theme_override_styles/panel = SubResource("StyleBoxFlat_uwp11")

[node name="Button" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 99.0
offset_top = -251.0
offset_right = 239.0
offset_bottom = -182.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("8_lsdw8")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("9_bfou1")
theme_override_styles/hover = SubResource("StyleBoxFlat_78c12")
text = "بازگشت"

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -677.0
offset_top = -261.0
offset_right = 401.0
offset_bottom = 199.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_lsdw8")
theme_override_font_sizes/font_size = 29
text = "                                                      به نام او

کلیدهای بازی : | ➡ | ⬅ | space | esc |

[ توجه ! ] در بعضی قسمت‌ها با زدن کلید space اطلاعاتی به شما نمایش داده خواهد شد.
"
horizontal_alignment = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_8jc7k")
autoplay = true

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Guide" to="." method="_on_guide_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="mute" to="." method="_on_mute_pressed"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_button_pressed"]
